--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,10 @@ body {
   * {
     @apply border-border;
   }
+  html {
+    @apply h-full;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-full;
   }
 }
